--- a/app/src/main/res/drawable/border_yellow.xml
+++ b/app/src/main/res/drawable/border_yellow.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#FFFFFF"/>
+<!--    <solid android:color="#FFFFFF"/>-->
     <stroke android:width="3dp" android:color="#FFE500" />
     <corners android:radius="20dp"/>
     <padding android:left="0dp" android:top="0dp"
