--- a/app/src/main/res/layout/board_cell.xml
+++ b/app/src/main/res/layout/board_cell.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/board_cell"
-    android:layout_width="50dp"
-    android:layout_height="50dp"
-    android:layout_margin="25dp"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_margin="15dp"
     android:elevation="4dp"
     android:gravity="center">
 
@@ -15,16 +15,22 @@
 
         <TextView
             android:id="@+id/name"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="0dp" />
 
         <ImageView
             android:id="@+id/figureImage"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
+            android:layout_width="50dp"
+            android:layout_height="90dp"
             android:layout_gravity="center"
             android:scaleType="centerCrop" />
 
+        <ImageView
+            android:id="@+id/figureImage2"
+            android:layout_width="50dp"
+            android:layout_height="45dp"
+            android:layout_gravity="top|center"
+            android:scaleType="centerCrop" />
     </FrameLayout>
 
 </androidx.cardview.widget.CardView>
